# form_manager

./: .gitignore  CLAUDE.md  COMPREHENSIVE-TEMPLATE-DEMO.md  COMPREHENSIVE_CODE_REVIEW.md  CSV_EXPORT_IMPROVEMENTS.md  CSV_PARSING_FIX.md  FIX_UNKNOWN_SCHEMAS.md  IMPORT-BUTTON-GUIDE.md  JCC2_Data_Collection_and_Interview_Form_v4_mock_data_5_instances (2).csv  PHASE-1-IMPLEMENTATION-REPORT.md  PRD.md  README-playwright.md  README.md  debug-import.ts  debug-jcc2-form.js  debug-template-fields.ts  debug-templates.js  debug_csv_parsing.cjs  debug_csv_parsing.js  debug_import.js  debug_import_real.js  fix-csv-parsing.patch  fix_csv.py  fix_csv2.py  force-reload-templates.html  index.html  manual_fix_instructions.md  mcp-test.js  package-lock.json  package.json  playwright.config.ts  screenshot-dashboard.js  standalone-form-manager.html  test-common-templates.js  test-completed-status.html  test-csv-export.js  test-default-templates.js  test-import-simple.js  test-progress-calculation.js  test-refresh-button.js  (+10 more)
data_analysis/: analysis_prompts.md  debug_field_structure.py  jcc2-questionnaire.md  jcc2_data_processor.py  pyproject.toml
data_analysis/.ipynb_checkpoints/: DCDC UQ-checkpoint.ipynb  jcc2_executive_summary-checkpoint.ipynb
data_analysis/data/: JCC2 User Questionnaire V4_mock_combine_2.csv  JCC2 User Questionnaire V4_mock_combine_3.csv
data_analysis/notebooks/: DCDC UQ.ipynb  debug_field_patterns.ipynb  examine_fields_directly.ipynb  example_jcc2_notebook.ipynb  final_field_check.ipynb  jcc2_application_section_matrix.ipynb  jcc2_executive_summary.ipynb  (+4 more)
(+202 files in other folders)
