[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.18.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "selenium>=4.34.2",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
]
